// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedBodyComponent should render the feed content when the content is exists 1`] = `
<div
  class="feed-body"
>
  <div
    class="feed-body__header"
  >
    
  </div>
  <div
    class="feed-body__content"
  />
  
  <div
    class="feed-body__tags"
  >
    <a
      class="feed-body__tags-link"
      href="https://www.linkedin.com/"
      target="_blank"
    >
      #marketing
    </a>
    <a
      class="feed-body__tags-link"
      href="https://www.linkedin.com/"
      target="_blank"
    >
      #marketingstrategy
    </a>
    <a
      class="feed-body__tags-link"
      href="https://www.linkedin.com/"
      target="_blank"
    >
      #employeeadvocacy
    </a>
    <a
      class="feed-body__tags-link"
      href="https://www.linkedin.com/"
      target="_blank"
    >
      #employeeinfluencers
    </a>
  </div>
  
</div>
`;

exports[`FeedBodyComponent should render the feed image when the imgUrl is exists 1`] = `
<div
  class="feed-body"
>
  <div
    class="feed-body__header"
  >
    
  </div>
  
  <div
    class="feed-body__tags"
  >
    <a
      class="feed-body__tags-link"
      href="https://www.linkedin.com/"
      target="_blank"
    >
      #marketing
    </a>
    <a
      class="feed-body__tags-link"
      href="https://www.linkedin.com/"
      target="_blank"
    >
      #marketingstrategy
    </a>
    <a
      class="feed-body__tags-link"
      href="https://www.linkedin.com/"
      target="_blank"
    >
      #employeeadvocacy
    </a>
    <a
      class="feed-body__tags-link"
      href="https://www.linkedin.com/"
      target="_blank"
    >
      #employeeinfluencers
    </a>
  </div>
  <div
    class="feed-body__image"
  >
    <img
      alt="Europe's most active mechanical or industrial engineering professionals on social"
      src="https://dsmn8.imgix.net/dsmn8/image/PcdTvyy0wRnhpaC5sCEjXbgca.jpeg?w=1200"
    />
  </div>
  
</div>
`;

exports[`FeedBodyComponent should render the feed title when the name is exists 1`] = `
<div
  class="feed-body"
>
  <div
    class="feed-body__header"
  >
    <h3
      class="feed-body__header-title"
    >
       DSMN8 - The Employee Influence Platform 
    </h3>
    
  </div>
  
  <div
    class="feed-body__tags"
  >
    <a
      class="feed-body__tags-link"
      href="https://www.linkedin.com/"
      target="_blank"
    >
      #marketing
    </a>
    <a
      class="feed-body__tags-link"
      href="https://www.linkedin.com/"
      target="_blank"
    >
      #marketingstrategy
    </a>
    <a
      class="feed-body__tags-link"
      href="https://www.linkedin.com/"
      target="_blank"
    >
      #employeeadvocacy
    </a>
    <a
      class="feed-body__tags-link"
      href="https://www.linkedin.com/"
      target="_blank"
    >
      #employeeinfluencers
    </a>
  </div>
  
</div>
`;
